The last commit broke it, the port string was a fixnum and not being stringified properly.

--- a/dashboard_location/README
+++ b/dashboard_location/README
@@ -35,3 +35,5 @@ Installation:
   Add this to your signup process. Ryan address how to do similiar things here: http://railscasts.com/episodes/75
     
 Cheers, hope your coding time is easier. Any suggestions or code changes you want to suggest, please email me by going to zachinglis.com/contact!
+
+Released under the MIT License as is account_dashboard
